fix(layout): code block caption bar on safari

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -394,14 +394,11 @@ figure.highlight
         background: rgba(200, 200, 200, 0.15)
 
     figcaption
+        margin: 0 !important
         padding: .3em .75em
         text-align: left
         font-style: normal
         font-size: .8em
-        &:after
-            clear: both
-            content: " "
-            display: table
 
         span
             font-weight: 500
@@ -412,7 +409,6 @@ figure.highlight
             color: #9a9a9a
 
         a
-            float: right
             margin-left: 0.5em
 
         .fold
